--- a/Secret_project/estilo.css
+++ b/Secret_project/estilo.css
@@ -9,7 +9,7 @@
 
   --fonte-primaria: 'Roboto', sans-serif;
   --fonte-secundaria: 'Poppins', sans-serif;
-}
+  }
 
   header {
     background-color: var(--cor-header);
@@ -17,6 +17,36 @@
     text-align: center;
   }
 
+  .cabecalho__menu_link {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    font-size: 1.3rem;
+    font-weight: 500;
+    color: var(--branco-principal);
+    text-decoration: none;
+    font-family: var(--fonte-primaria);
+    position: relative;
+  }
+
+  .cabecalho__menu_link::after {
+    content: " ";
+    width: 0%;
+    height: 2px;
+    background-color: var(--branco-principal);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transition: 0.5s ease-in-out;
+  }
+
+  .cabecalho__menu_link li {
+    display: flex;
+    justify-content: center;
+  }
+    
   body {
     font-family: var(--fonte-primaria);
     margin: 0;
@@ -27,10 +57,12 @@
   h1 {
     margin: 0;
   }
+
   section {
     padding: 20px;
     text-align: center;
   }
+
   .book-list {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
@@ -38,6 +70,7 @@
     justify-items: center;
     margin-top: 20px;
   }
+
   .book {
     border: 1px solid #ccc;
     padding: 10px;
