--- a/Secret_project/estilo.css
+++ b/Secret_project/estilo.css
@@ -76,3 +76,27 @@
     padding: 10px;
     text-align: center;
   }
+  
+  footer {
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+    margin-top: 50px;
+  }
+  
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  li {
+    display: inline-block;
+    margin: 0 10px;
+    }
+    
+  a {
+    color: #fff;
+    text-decoration: none;
+  }
